# piki

./: .gitignore  README.md  SKILL.md  llm-wiki.md  pyproject.toml
.github/: GITHUB_ACTION.md
.github/workflows/: notify-wiki.yml  piki-sync.yml  publish.yml
.omc/: project-memory.json
.omc/sessions/: 17c174b3-d6dd-4889-817d-750424b40d40.json  2bacdd73-c3a8-467f-bfdd-d7dc533f59c2.json  68660998-3978-4eb8-afee-a7dbb54e33da.json
Formula/: piki.rb
piki/: config.py  main.py
piki/commands/: config_cmd.py  ingest_cmd.py  init_cmd.py  show_cmd.py  skill_cmd.py  wiki_cmd.py
piki/wiki/: __init__.py  db.py  render.py
